--- a/playoffs.html
+++ b/playoffs.html
@@ -10,7 +10,7 @@
 
   <nav> <!-- Navigaatio-osio -->
     <ul>
-      <li><a href="standings.html">Sarjataulukko</a></li> <!-- Linkki sarjataulukkoon -->
+      <li><a href="index.html">Sarjataulukko</a></li> <!-- Linkki sarjataulukkoon -->
       <li><a href="playoffs.html">Pudotuspelit</a></li> <!-- Linkki pudotuspeleihin -->
       <li><a href="search.html">Maalitilastot</a></li> <!-- Linkki maalitilastoihin -->
     </ul>
