--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
 <body>
     <nav> <!-- Navigaatio-osio -->
         <ul>
-            <li><a href="standings.html">Sarjataulukko</a></li> <!-- Linkki sarjataulukkoon -->
+            <li><a href="index.html">Sarjataulukko</a></li> <!-- Linkki sarjataulukkoon -->
             <li><a href="playoffs.html">Pudotuspelit</a></li> <!-- Linkki pudotuspeleihin -->
             <li><a href="search.html">Maalitilastot</a></li> <!-- Linkki maalitilastoihin -->
         </ul>
